--- a/app/globals.css
+++ b/app/globals.css
@@ -298,7 +298,7 @@
   .form-btn {
     @apply !bg-primary !text-dark-100 hover:!bg-primary/85 
          inline-flex min-h-14 w-full items-center justify-center 
-         rounded-md px-6 py-2 font-bold text-base;
+         rounded-md px-6 py-2 font-bold text-base !cursor-pointer;
   }
 
   .form-input {
@@ -389,7 +389,7 @@
   }
   /* File Upload */
   .upload-btn {
-    @apply flex min-h-14 w-full items-center justify-center gap-1.5 rounded-md;
+    @apply flex min-h-14 w-full items-center justify-center gap-1.5 rounded-md !bg-dark-300 cursor-pointer;
   }
   .upload-filename {
     @apply mt-1 text-center text-xs;
